Tidied up, added button

--- a/public/static/skedulo.css
+++ b/public/static/skedulo.css
@@ -1,23 +1,25 @@
 * { font-family: Lato, sans }
 
 a { color: black }
-.container-fluid { padding-top: 28px }
+.container-fluid { padding-top: 56px }
+
+h4, h3 { padding-top: 12px;  }
 
 div.meeting {
-    border-left: 12px solid #b2df8a ;
+    border-left: 16px solid #b2df8a ;
     padding: 4px;
 }
 
 div.meeting:nth-child(odd) {
     background-color: #eeeeee
 }
-div.meeting.canceled { border-left: 12px solid #a6cee3 }
+div.meeting.canceled { border-left: 16px solid #a6cee3 }
 
-div.meeting.conflict { border-left: 12px solid #b61516 }
+div.meeting.conflict { border-left: 16px solid #b61516 }
 
-div.meeting.responseneeded { border-left: 12px solid #ff7f00 }
+div.meeting.responseneeded { border-left: 16px solid #ff7f00 }
 
-div.meeting.unconfirmed { border-left: 12px solid #377eb8 }
+div.meeting.unconfirmed { border-left: 16px solid #377eb8 }
 
 div.meeting.main {
     padding: 4px;
@@ -37,3 +39,13 @@ h4 { display: inline-block; font-size: 1.2em }
 
 .navbar-nav.fixed-bottom > li > a {padding-top:5px !important; padding-bottom:5px !important;}
 .navbar {min-height:32px !important}
+
+.skbutton {
+    height:3em;
+    line-height:3em;
+    background-color:#1f78b4;
+    text-align:center;
+    text-weight:bold;
+    color:white;
+    margin-top:1em;
+}
